# yeet

./: README.md
client/: README.md  package.json  pnpm-lock.yaml
client/src/routes/: +page.svelte  +page.ts
server/: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml
server/jwt/: Cargo.toml
server/jwt/src/: lib.rs
server/prisma/: schema.prisma
server/src/: main.rs  routes.rs
