[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
argon2 = "0.5.3"
jwt = { path = "./jwt" }
